# SPDX-FileCopyrightText: Copyright (c) 2024 Ferrous Systems
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "freertos-sys"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0.83"
